--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.5.17",
     "vue-croppa": "^1.3.8",
     "vue-i18n": "^8.2.1",
+    "vue-meta": "^1.5.8",
     "vue-router": "^3.0.2",
     "vue-scrollto": "^2.13.0",
     "vuex": "^3.0.1",
