--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '2.1'
 
 services:
-  wenker:
-    image: wenker
+  snapp:
+    image: snapp
     build: .
     environment:
       NODE_ENV: production
     ports:
-      - 8000:80
+      - 7000:80
