--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "postbuild": "react-snap"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
