--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && react-snap",
     "lint": "vue-cli-service lint",
     "now-build": "vue-cli-service build",
     "now-static": "vue-cli-service build && react-snap && cp config/now.json dist && cd dist && now --prod",
