now.json fixed / submodule

--- a/now.json
+++ b/now.json
@@ -7,7 +7,7 @@
       "headers": { "cache-control": "max-age=31536000, immutable" }
     },
     { "handle": "filesystem" },
-    { "src": "./dist/*", "dest": "/" }
+    { "src": "/.*", "dest": "/index.html" }
   ],
   "alias": "snakes.citizenscience.ch"
 }
