--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "build": "vue-cli-service build && react-snap",
     "lint": "vue-cli-service lint",
     "now-build": "vue-cli-service build",
-    "now-static": "vue-cli-service build && react-snap && cp config/now.json dist && cd dist && now --prod",
-    "deploy": "now --prod"
+    "now-static": "vue-cli-service build && react-snap && vercel --prod",
+    "deploy": "vercel"
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
     "js-cookie": "^2.2.0",
-    "node-sass": "^4.9.3",
     "react-snap": "^1.23.0",
     "sass-loader": "^7.1.0",
     "simple-analytics-vue": "^1.1.0",
@@ -34,6 +33,7 @@
     "@vue/cli-service": "^3.2.0",
     "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-html": "^5.0.0",
+    "node-sass": "^4.14.1",
     "swagger-client": "^3.8.22",
     "vue-template-compiler": "^2.5.17",
     "vuex-c3s": "^1.1.0"
@@ -62,14 +62,7 @@
     "minifyHtml": {
       "collapseWhitespace": false,
       "removeComments": false
-    },
-    "puppeteerArgs": [
-      "--disable-setuid-sandbox",
-      "--no-sandbox"
-    ],
-    "concurrency": 1,
-    "inlineCss": false,
-    "puppeteerExecutablePath": "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome"
+    }
   },
   "browserslist": [
     "> 1%",
