--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
     "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-html": "^5.0.0",
     "node-sass": "^4.14.1",
-    "swagger-client": "^3.8.22",
-    "vue-template-compiler": "^2.5.17",
-    "vuex-c3s": "^1.1.0"
+    "swagger-client": "^3.13.5",
+    "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
     "root": true,
